<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.settings.privacy.PrivacyFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextContent.TextHeading2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_statement"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_time"
                style="@style/TextContent.BodyS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_14_june_2024"
                android:textColor="?attr/colorAccent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <LinearLayout
                android:id="@+id/LL_statement"
                style="@style/TextContent.BodyM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_time">

                <TextView
                    android:id="@+id/tv_statement_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/statement_one"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/tv_statement_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/statement_two"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/tv_statement_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/statement_three"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/tv_statement_four"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/statement_four"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/tv_statement_five"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/statement_five"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/tv_statement_six"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/statement_six"
                    tools:targetApi="o" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>